--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.18",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
