--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080/",
   "dependencies": {
     "@auth0/auth0-react": "^1.10.1",
     "@testing-library/jest-dom": "^5.16.4",
