--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": " cd client && npm run build && cd..",
     "test": "echo something"
   },
   "author": "",
