--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "cd client && npm run build && cd..",
     "test": "echo something"
   },
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "js-date-to-sql-datetime": "^1.2.7",
     "mysql": "^2.18.1"
   }
 }
